
syntax = "proto3";

package ds_alert_plugin_instance;

import "google/protobuf/empty.proto";
import "google/protobuf/field_mask.proto";
import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";

message DsAlertPluginInstance {

    int32 id=1;
    int32 plugin_define_id=2;
    optional string plugin_instance_params=3;
    optional string create_time=4;
    optional string update_time=5;
    optional string instance_name=6;
}
message VerifyAlertPluginInstanceRequest {
  string instance_name=1 ;
}


// Generated according to https://cloud.google.com/apis/design/standard_methods
service DsAlertPluginInstanceService {
  rpc ListDsAlertPluginInstances(ListDsAlertPluginInstancesRequest) returns (ListDsAlertPluginInstancesResponse) {
    option (google.api.http) = {
      get: "/v1alpha1/DsAlertPluginInstances"
    };
  }

  rpc GetDsAlertPluginInstance(GetDsAlertPluginInstanceRequest) returns (DsAlertPluginInstance) {
    option (google.api.http) = {
      get: "/v1alpha1/{name=DsAlertPluginInstances/*}"
    };
  }

  rpc CreateDsAlertPluginInstance(CreateDsAlertPluginInstanceRequest) returns (DsAlertPluginInstance) {
    option (google.api.http) = {
      post: "/v1alpha1/DsAlertPluginInstances"
      body: "DsAlertPluginInstance"
    };
  }

  rpc UpdateDsAlertPluginInstance(UpdateDsAlertPluginInstanceRequest) returns (DsAlertPluginInstance) {
    option (google.api.http) = {
      patch: "/v1alpha1/{DsAlertPluginInstance.name=DsAlertPluginInstances/*}"
      body: "DsAlertPluginInstance"
    };
  }

  rpc DeleteDsAlertPluginInstance(DeleteDsAlertPluginInstanceRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/v1alpha1/{name=DsAlertPluginInstances/*}"
    };
  }
  rpc VerifyAlertPluginInstance(VerifyAlertPluginInstanceRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      post: "/v1alpha1/DsAlertPluginInstances/verify"
      body: "VerifyAlertPluginInstanceRequest"
    };
  }
  rpc AllAlertPluginInstance(google.protobuf.Empty) returns (AllDsAlertPluginInstancesResponse) {
    option (google.api.http) = {
      get: "/v1alpha1/DsAlertPluginInstances/all"
    };
  }
}

// message DsAlertPluginInstance {
// ! This should be defined elsewhere
// }

message ListDsAlertPluginInstancesRequest {
    // The maximum number of items to return.
    int64 page_size = 1;
    int64 page_num = 2;
    optional string search_val=3 ;
}

message AllDsAlertPluginInstancesResponse {
  repeated DsAlertPluginInstance total_list = 1;
}

message ListDsAlertPluginInstancesResponse {
  repeated DsAlertPluginInstance total_list = 1;
  int64 current_page = 2;
  int64 page_size = 3;
  int64 start = 4;
  int64 total = 5;
  int64 total_page = 6;
}

message GetDsAlertPluginInstanceRequest {
  // The field will contain name of the resource requested.
  string name = 1;
}

message CreateDsAlertPluginInstanceRequest {
    int32 plugin_define_id=1;
    optional string plugin_instance_params=2;
    optional string instance_name=3;
}

message UpdateDsAlertPluginInstanceRequest {
    int32 id=1;
    optional string plugin_instance_params=2;
    optional string instance_name=3;
}

message DeleteDsAlertPluginInstanceRequest {
  // The resource name of the DsAlertPluginInstance to be deleted.
  int32 id = 1;
}
